<resources>
    <string name="app_name">Train</string>
    <string name="trainme">TrainMe</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="passwordhint">Password</string>
    <string name="login">Login</string>
    <string name="join_us">Join Us</string>
    <string name="fullname">Full Name</string>
    <string name="fill_name">Fill Name</string>
    <string name="confirm_e_mail">Confirm E-Mail</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="let_us_know_you_better">Let Us Know You Better</string>
    <string name="birth_date">Birth Date</string>
    <string name="full_name">Full Name</string>
    <string name="weigh">Weigh</string>
    <string name="my_zone">My Zone</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="ideas">Ideas</string>
    <string name="time">Time</string>
    <string name="course_name">Course Name</string>
    <string name="coach_name">Coach Name</string>
    <string name="course_status">Course Status</string>
    <string name="header">Header</string>
    <string name="description">Description</string>
    <string name="course_location">Course Location</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="courses">Courses</string>
    <string name="waitingList">Join To Waiting List</string>
    <string name="logout">LogOut</string>
    <string name="users">Users</string>
    <string name="cancel_regisration">Cancel Registration</string>
    <string name="registered">Registered</string>
    <string name="register">register</string>
    <string name="waitingListOnFB">waitingList</string>
    <string name="details">Details</string>
    <string name="start_training">Start Training</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="rate">Rate</string>
    <string name="monthly_calorie_summary">Last 7 Courses Calorie Summary</string>
    <string name="weekly_heart_rate">Last 4 Courses Heart Rate</string>
    <string name="courses_taken_this_month">Last 30 Courses Taken</string>
    <string name="age">Age</string>
    <string name="rateCourse">Rate this course</string>
    <string name="your_next_courses">Your Next Courses</string>
    <string name="recommendation">Recommendation</string>
    <string name="graphs">Graphs</string>
    <string name="my_courses">My Courses</string>
    <string name="date">date</string>
    <string name="get_recommendation_description">Here you can get a recommendation for the course that suits you personally considering your previous rankings. Click the GET RECOMMENDATION button to get one</string>
</resources>
