<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="15dp"
    android:elevation="3dp"
    android:id="@+id/course_on_scheduler_id"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/colorGray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/courseNameIdOnScheduler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/course_name"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coachNameIdOnScheduler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/coach_name"
                android:textColor="@color/colorWhite" />


            <TextView
                android:id="@+id/timeIdOnScheduler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/courseStatusIdOnScheduler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_weight="0.4"
            android:text="@string/course_status"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorYellowDark" />


    </LinearLayout>
</LinearLayout>