<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:elevation="3dp"
    android:id="@+id/course_on_scheduler_id"
    android:layoutDirection="ltr"
    app:cardCornerRadius="15dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="7.5dp"
        android:background="@drawable/my_course_shape">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp">

            <TextView
                android:gravity="center"
                android:id="@+id/courseNameIdOnMyZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:ellipsize="end"
                android:text="@string/course_name"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:id="@+id/coachNameIdOnMyZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/coach_name"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/dateIdOnOnMyZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/colorWhite"
                />

            <TextView
                android:id="@+id/timeIdOnOnMyZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/colorWhite"
                />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>