<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Recommendation_Fragment"
    android:background="@drawable/gradient_deep_space"
    android:layoutDirection="ltr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:textSize="21sp"
        android:text="@string/courses_taken_this_month"
        android:textColor="@color/colorButtonLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart_id"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

    </com.github.mikephil.charting.charts.PieChart>
    <TextView
        android:textSize="21sp"
        android:text="@string/weekly_heart_rate"
        android:textColor="@color/colorButtonLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart_id"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

    </com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:textSize="21sp"
        android:text="@string/monthly_calorie_summary"
        android:textColor="@color/colorButtonLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_id"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        >

    </com.github.mikephil.charting.charts.BarChart>
</LinearLayout>
    </ScrollView>

</RelativeLayout>